--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://muneeb:muneeb@cluster0.u9lsf.mongodb.net/ecommerce?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_random
 NODE_ENV=production
+FRONTEND_URL=https://tatheer-fatima-collection.vercel.app
